# Vanta

./: .gitignore  App.tsx  DBschema.sql  app.json  package-lock.json  package.json  test_intent_builder
Reads/: GraphTraversalLogic.md  JNI.md  JNI_1.md
cpp/CLIP/: CLIP_image.cpp  CLIP_image.hpp
cpp/Segregation/: Seg_model.cpp  Seg_model.hpp
cpp/clip_module/: README.md  main.cpp
cpp/clip_module/CLIP/: CLIP_model.cpp  CLIP_model.hpp
cpp/clip_module/load_files/: getfiles.cpp
cpp/clip_module/produce_model/: README.md  get_onnx_CLIP.py  quantize.py  requirements.txt
cpp/testing/: README.md  clip_app  main.cpp  main_segregation.cpp
cpp/testing/load_files/: getfiles.hpp
modules/vanta-bridge/: expo-module.config.json
modules/vanta-bridge/android/: build.gradle
modules/vanta-bridge/android/src/main/cpp/: CMakeLists.txt
modules/vanta-bridge/android/src/main/java/expo/modules/vantaengine/: VantaEngineModule.kt
modules/vanta-bridge/src/: VantaEngineModule.ts  VantaEngineModule.web.ts
produce_Ner/: generate_data.py  requirements.txt  test_ner.py  train_ner.py
produce_Ner/ner_checkpoint/runs/checkpoint-1275/: rng_state.pth  scheduler.pt  trainer_state.json
produce_Ner/ner_checkpoint/runs/checkpoint-340/: config.json  rng_state.pth  scheduler.pt  trainer_state.json
produce_Ner/onnx_model/: label_map.json  ner_bert_tiny.onnx  tokenizer_config.json
produce_model/: README.md  convert_tosingle_file.py  get_onnx_CLIP.py  quantize.py
vanta_app/: .eslintrc.js  .gitignore  .prettierignore  App.tsx  ErrorBoundary.tsx  README.md  ThemeContext.tsx  app.json  download_models.py  jest.config.js  jest.setup.js  kimi.md  package-lock.json  package.json  prettier.config.js  tsconfig.eslint.json  tsconfig.json  vanta_logs.txt
vanta_app/.github/workflows/: ci.yml
vanta_app/__mocks__/: ThemeContext.tsx  expo.ts  vanta-bridge.ts
vanta_app/__mocks__/@expo/: vector-icons.tsx
vanta_app/__mocks__/@react-navigation/: native-stack.tsx  native.tsx
vanta_app/__tests__/: App.test.tsx  SearchScreen.test.tsx  ThemeContext.test.tsx  formatting.test.ts
vanta_app/hooks/: useVantaError.ts
vanta_app/modules/vanta-bridge/: index.ts
vanta_app/modules/vanta-bridge/android/: build.gradle
vanta_app/modules/vanta-bridge/android/src/main/: AndroidManifest.xml
vanta_app/modules/vanta-bridge/android/src/main/java/expo/modules/vantaengine/: Android_scan.kt  IndexingService.kt  MediaLoader.kt  VantaEngineConfig.kt  VantaEngineModule.kt  VantaInsert.kt
vanta_app/modules/vanta-bridge/cpp/: .gitignore  CMakeLists.txt  test_fp16.cpp  vanta.cpp
vanta_app/modules/vanta-bridge/cpp/DB/: DBoperations.cpp  DBoperations.hpp  clip_db.cpp  clip_db.hpp  face_DB.cpp  face_DB.hpp  graph_db.cpp  graph_db.hpp
vanta_app/modules/vanta-bridge/cpp/Include/: Config.hpp  json_utils.hpp
vanta_app/modules/vanta-bridge/cpp/Include/Graph/: create.hpp
vanta_app/modules/vanta-bridge/cpp/Include/Preprocessing/CLIP/: CLIP_image.cpp  CLIP_image.hpp  CLIP_model.cpp  CLIP_model.hpp  CLIP_tokenizer.cpp  CLIP_tokenizer.hpp
vanta_app/modules/vanta-bridge/cpp/Include/Preprocessing/Segregation/: Seg_model.cpp  Seg_model.hpp
vanta_app/modules/vanta-bridge/cpp/Include/Query/Intent/: IntentBuilder.cpp  IntentBuilder.hpp
vanta_app/modules/vanta-bridge/cpp/Include/Query/NER_BERT/: bert_tokenizer.cpp  bert_tokenizer.hpp  ner.cpp  ner.hpp
vanta_app/modules/vanta-bridge/cpp/Include/Query/Query_processing/: query_engine.cpp  query_engine.hpp  typo_rectifyier.cpp  typo_rectifyier.hpp
vanta_app/modules/vanta-bridge/cpp/Segregation/: Seg_model.hpp
vanta_app/modules/vanta-bridge/ios/: VantaEngine.podspec  VantaEngineModule.swift
vanta_app/modules/vanta-bridge/src/: VantaEngine.types.ts  VantaEngineModule.ts  VantaEngineModule.web.ts
vanta_app/screens/: DebugScreen.tsx  EntityDetailScreen.tsx  PeopleScreen.tsx  SearchScreen.tsx  SettingsScreen.tsx
vanta_app/utils/: formatting.ts
